# SUSTech_CS202_Project-CPU

./: .gitattributes  README.md  build.sbt  build.sc
.github/workflows/: test.yml
chisel/: README.md  build.sbt
font/: README.md  convert.py  font.txt
font/font_data/: 20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  2A.txt  2B.txt  2C.txt  2D.txt  2E.txt  2F.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  3A.txt  3B.txt  3C.txt  3D.txt  3E.txt  3F.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  (+61 more)
program/: Makefile  fill.py
program/.cargo/: config
program/src/: board.rs  lang_items.rs  lib.rs  linker-program.ld  prelude.rs  rng.rs  time.rs
simulation/: Makefile  difftest.cpp  vga.cpp
software/: Cargo.toml  Makefile
software/src/: allocator.rs  console.rs  entry.asm  linker-loader.ld  monitor.rs  tube.rs  uart.rs
src/main/scala/: Top.scala
src/main/scala/board/: BoardSignalsBundle.scala  Keyboard.scala  Tubes.scala  UART.scala
src/main/scala/core/: ALU.scala  Comparator.scala  Core.scala  Decoder.scala  Memory.scala  RegisterFile.scala
src/main/scala/ip/: BlockMemory.scala  BlockMemoryRom.scala  ClockWizard.scala
src/main/scala/misc/: BoardSignalsBundle.scala  CrossClockData.scala  CrossClockQueue.scala  CrossClockSignal.scala  Debounce.scala  RNG.scala  (+2 more)
vivado/: constraints.xdc
vivado/ip/blk_mem_gen_0/: blk_mem_gen_0.xci
vivado/ip/blk_mem_gen_1/: blk_mem_gen_1.xci
vivado/ip/blk_mem_gen_2/: blk_mem_gen_2.xci
vivado/ip/clk_wiz_0/: clk_wiz_0.xci
(+33 files in other folders)
