[package]
name = "cpu_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "^0.8.5", default-features = false }
emballoc = { version = "0.1.2", path = "3rd_party/emballoc", optional = true }

[features]
alloc = ["dep:emballoc"]

[[bin]]
name = "tetris"
required-features = ["alloc"]

[profile.release]
# opt-level = "z"
strip = "debuginfo"
lto = true
panic = "abort"
codegen-units = 1
